my-store angular application

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
-<head>
+<head >
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset="utf-8">
   <title>MyStore</title>
   <base href="/">
@@ -9,5 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
+  
 </body>
 </html>
